<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="300"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_premium"
        android:orderInCategory="400"
        android:title="@string/action_premium"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_submit"
        android:orderInCategory="500"
        android:title="@string/action_submit"
        app:showAsAction="never" />


</menu>